tests/samples/negative/resources/move_borrow_block_assignment_alias_after_move.ax
module move_borrow_block_assignment_alias_after_move;

fn consume<T>(value: T) -> void {
}

fn inspect<T>(value: &T) -> void {
}

fn duplicate<T>(value: T) -> void {
    let borrowed: &T = {
        var alias: &T = &value;
        alias = &value;
        alias
    };
    consume(value);
    inspect(borrowed);
}

fn main() -> i32 {
    return 0;
}
